--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div>
       <img src="map3.png" alt="">
       <img class="map2" src="map1.png" alt="">
-      <img src="map2.png" alt="">
+      <img class="map1" src="map2.png" alt="">
       <img class="e1" src="Ellipse 1.png" alt="">
       <img class="e2" src="Ellipse 2.png" alt="">
       <img class="g198" src="198.png" alt="">
