--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <td><img src="eth.png" alt=""> Ethereum <span>ETH</span></td>
         <td>$1218.18</td>
         <td style="color: #FF0000;">-0.7%</td>
-        <td><img src="red.png" alt=""></td>
+        <td><img class="red" src="red.png" alt=""></td>
         <td>$148,563,792,762</td>
       </tr>
       <tr>
@@ -70,7 +70,7 @@
         <td><img src="eth.png" alt=""> Ethereum <span>ETH</span></td>
         <td>$1218.18</td>
         <td style="color: #FF0000;">-0.7%</td>
-        <td><img src="red.png" alt=""></td>
+        <td><img class="red" src="red.png" alt=""></td>
         <td>$148,563,792,762</td>
       </tr>
       <tr>
@@ -91,7 +91,7 @@
         <td><img src="eth.png" alt=""> Ethereum <span>ETH</span></td>
         <td>$1218.18</td>
         <td style="color: #FF0000;">-0.7%</td>
-        <td><img src="red.png" alt=""></td>
+        <td><img class="red" src="red.png" alt=""></td>
         <td>$148,563,792,762</td>
       </tr>
       <tr>
@@ -105,15 +105,15 @@
     <button class="viewbtn">View All</button>
   </section>
   <section class="two">
-    <div>
+    <div class="twoone">
       <img src="map3.png" alt="">
       <img class="map2" src="map1.png" alt="">
       <img class="map1" src="map2.png" alt="">
       <img class="e1" src="Ellipse 1.png" alt="">
       <img class="e2" src="Ellipse 2.png" alt="">
-      <img class="g198" src="198.png" alt="">
-      <img class="g20" src="20.png" alt="">
-      <img class="g350" src="350.png" alt="">
+      <img  class="g198" src="198.png" alt="">
+      <img  class="g20" src="20.png" alt="">
+      <img  class="g350" src="350.png" alt="">
       <img class="gs" src="shibu.png" alt="">
       <img class="ge" src="eth.png" alt="">
       <img class="gb" src="bitcoin.png" alt="">
